Implementing of endpoint for get registration by id
